chore: shrink docker image using adoptium buildpack with jlink enabled